--- a/index.html
+++ b/index.html
@@ -140,13 +140,35 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2412.00832" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
+                <!-- Google Drive Model Link -->
+                  <span class="link-block">
+                    <a href="https://drive.google.com/drive/u/1/folders/1FgA0a0HQ6AnF6gq_97Z0iPJXRUUup_vn" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-cloud-download-alt"></i>
+                      </span>
+                      <span>Model</span>
+                    </a>
+                  </span>
+
+                  <!-- Hugging Face Dataset Link -->
+                  <span class="link-block">
+                    <a href="https://huggingface.co/datasets/XduSyL/EventGPT-datasets/tree/main" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-database"></i>
+                      </span>
+                      <span>Dataset</span>
+                    </a>
+                  </span>
+
               </span>
             </div>
           </div>
